Almost done, just need to fix the spacing for the scores and then make it phone compatible maybe

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: arcade;
+    src: url("arcadeFont.ttf");
+}
+
 body {
     background: black;
+    font-family: arcade;
 }
 
 h1 {
@@ -22,6 +28,40 @@ h4 {
     justify-content: center;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.scoreP1 {
+    color: pink;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    text-align: center;
+    font-size: 100px;
+}
+
+.scoreP2 {
+    color: skyblue;
+    grid-column-start: 3;
+    grid-row-start: 1;
+    text-align: center;
+    font-size: 100px;
+}
+
+.p1Val {
+    color: white;
+    text-align: center;
+    font-size: 100px;
+}
+
+.p2Val {
+    color: white;
+    text-align: center;
+    font-size: 100px;
+}
+
 .p1 {
     background: pink;
 }
@@ -35,6 +75,9 @@ h4 {
     grid-template-columns: 150px 150px 150px;
     grid-template-rows: 150px 150px 150px;
     justify-content: center;
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    grid-column-start: 2;
 }
 
 .box {
